--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
     "llm_model": {
-        "llama3.2-3B" : {
-            "ollama" : "llama3.2",
-            "huggingface" : "unsloth/Llama-3.2-3B-Instruct"
+        "llama3.2-3B": {
+            "ollama": "llama3.2",
+            "huggingface": "unsloth/Llama-3.2-3B-Instruct"
         }
     },
     "embeddings_model": {
-        "small": "all-MiniLM-L6-v2"
+        "small": "sentence-transformers/all-MiniLM-L6-v2"
     },
-    "load_exising_vectorstore": true
+    "load_exising_vectorstore": true,
+    "parsing_method": "llama-index"
 }
