--- a/config.json
+++ b/config.json
@@ -1,12 +1,9 @@
 {
     "llm_model": {
-        "llama3.2-3B": {
-            "ollama": "llama3.2",
-            "huggingface": "unsloth/Llama-3.2-3B-Instruct"
-        }
+        "gpt-4o": {}
     },
     "embeddings_model": {
-        "small": "sentence-transformers/all-MiniLM-L6-v2"
+        "gpt-large": "text-embedding-3-large"
     },
     "load_exising_vectorstore": true,
     "parsing_method": "llama-index"
