--- a/config.json
+++ b/config.json
@@ -1,10 +1,17 @@
 {
     "llm_model": {
-        "gpt-4o": {}
+        "llama3.2-3B": {
+            "ollama": "llama3.2",
+            "huggingface": "unsloth/Llama-3.2-3B-Instruct"
+        }
     },
     "embeddings_model": {
-        "gpt-large": "text-embedding-3-large"
+        "large": "intfloat/multilingual-e5-large-instruct"
     },
     "load_exising_vectorstore": true,
-    "parsing_method": "llama-index"
+    "parsing_method": "llama-index",
+    "languages": [
+        "en",
+        "da"
+    ]
 }
