--- a/config.json
+++ b/config.json
@@ -1,17 +1,13 @@
 {
     "llm_model": {
-        "llama3.2-3B": {
-            "ollama": "llama3.2",
-            "huggingface": "unsloth/Llama-3.2-3B-Instruct"
-        }
+        "gpt-4o": {}
     },
     "embeddings_model": {
-        "large": "intfloat/multilingual-e5-large-instruct"
+        "gpt-large": "text-embedding-3-large"
     },
     "load_exising_vectorstore": true,
-    "parsing_method": "llama-index",
+    "parsing_method": "local",
     "languages": [
-        "en",
-        "da"
+        "en"
     ]
 }
